# mini-dns-server

./: .gitignore  Cargo.toml  README.md  blocked_domains.txt
src/: blocklist.rs  dns.rs  http_api.rs  main.rs  types.rs
