[package]
name = "MiniDNSServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.24.0"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
